# redjubjubJS

./: Cargo.toml  README.md  test.js
src/: constants.rs  group_hash.rs  keys.rs  lib.rs  secret_key.rs  signing_key.rs
tests/: bincode.rs  librustzcash_vectors.rs  proptests.rs  smallorder.rs
