[package]
name = "redjubjub-js"
edition = "2018"
# When releasing to crates.io:
# - Update html_root_url
# - Update CHANGELOG.md
# - Create git tag.
version = "1.0.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/redjubjub"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "jubjub", "redjubjub"]
description = "A mostly-standalone implementation of the RedJubjub signature scheme and keys."

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
hex = "0.4"
rand_core = "0.5"
thiserror = "1.0"
bech32 = "0.7"
blake2b_simd = "0.5"
blake2s_simd = "0.5"
jubjub = "0.3"
serde = { version = "1", optional = true, features = ["derive"] }
serde_derive = "1"
rand = { version = "0.8", features = ["wasm-bindgen"] }
wasm-bindgen = {version = "^0.2", features = ["nightly", "serde-serialize"]}

[dev-dependencies]
rand_chacha = "0.2"
proptest = "0.10"
lazy_static = "1.4"
bincode = "1"

[features]
nightly = []
default = ["serde"]

[profile.release]
lto = true
opt-level = 's'